# rem6

./: .gitignore  Cargo.toml  README.md
crates/rem6/: Cargo.toml
crates/rem6-accelerator/: Cargo.toml
crates/rem6-accelerator/src/: command.rs  error.rs  lib.rs  snapshot.rs  topology.rs  trace.rs
crates/rem6-accelerator/tests/: engine.rs  source_policy.rs  topology.rs
crates/rem6-cache/: Cargo.toml
crates/rem6-cache/src/: allocation.rs  bank.rs  chi.rs  chi_bank.rs  clean_maintenance.rs  compressed_tags.rs  downstream.rs  dueling.rs  indexing.rs  lib.rs  mesi.rs  mesi_bank.rs  moesi.rs  moesi_bank.rs  mshr.rs  msi.rs  no_access.rs  partitioning.rs  post_fill.rs  prefetch.rs  prefetch_ampm.rs  prefetch_bop.rs  prefetch_dcpt.rs  prefetch_fdp.rs  prefetch_indirect_memory.rs  prefetch_isb.rs  prefetch_multi.rs  prefetch_pif.rs  prefetch_queue.rs  prefetch_sbooe.rs  prefetch_signature_path.rs  prefetch_signature_path_v2.rs  prefetch_slim_ampm.rs  prefetch_sms.rs  prefetch_stats.rs  prefetch_stems.rs  prefetch_throttle.rs  replacement.rs  replacement_directory.rs  sector_tags.rs  (+1 more)
crates/rem6-cache/tests/: cache_partitioning.rs  chi_bank.rs  chi_bank_compressed_tags.rs  chi_bank_sector_tags.rs  chi_controller.rs  clean_maintenance_bank.rs  compressed_tags.rs  downstream_ordering.rs  dueling.rs  indexing_policy.rs  mesi_bank.rs  mesi_bank_compressed_tags.rs  mesi_bank_sector_tags.rs  mesi_controller.rs  moesi_bank.rs  moesi_bank_compressed_tags.rs  moesi_bank_sector_tags.rs  moesi_controller.rs  mshr_queue.rs  msi_bank.rs  msi_bank_compressed_tags.rs  msi_bank_sector_tags.rs  msi_controller.rs  prefetch_fdp.rs  prefetch_indirect_memory.rs  prefetch_irregular_stream.rs  prefetch_multi.rs  prefetch_observation.rs  prefetch_pif.rs  prefetch_queue_stats.rs  prefetch_queue_translation.rs  prefetch_signature_path_v2.rs  prefetch_slim_ampm.rs  prefetch_stems.rs  prefetcher.rs  protocol_post_fill_bank.rs  replacement_policy.rs  sector_tags.rs  source_policy.rs  write_queue.rs
crates/rem6-coherence/: Cargo.toml
crates/rem6-coherence/src/: backing.rs  bank.rs  bank_snapshot_codec.rs  chi.rs  deferred.rs  directory_snapshot.rs  error.rs  lib.rs  mesi.rs  moesi.rs  partitioned_config.rs  partitioned_parallel.rs  partitioned_snapshot.rs  response.rs  response_record_tests.rs  snoop.rs  summary.rs  topology.rs  wait_for.rs
crates/rem6-coherence/tests/: cache_to_memory.rs  chi_directory_harness.rs  chi_topology_harness.rs  directory_harness.rs  mesi_directory_harness.rs  mesi_topology_harness.rs  moesi_directory_harness.rs  moesi_topology_harness.rs  msi_bank_harness.rs  msi_bank_snapshot_codec.rs  partitioned_directory_harness.rs  qos_summary.rs  source_policy.rs  store_conditional_fail_snapshot.rs  store_conditional_upgrade_snapshot.rs  topology_directory_harness.rs  wait_for_harness.rs
crates/rem6-cpu/: Cargo.toml
crates/rem6-cpu/src/: bimode_predictor.rs  bimode_predictor_checkpoint.rs  branch_predictor.rs  branch_predictor_checkpoint.rs  cpu_cluster.rs  cpu_core.rs  cpu_core_debug.rs  cpu_identity.rs  data_config.rs  error.rs  fetch_config.rs  fetch_event.rs  gshare_predictor.rs  gshare_predictor_checkpoint.rs  htm_transaction.rs  in_order_pipeline.rs  indirect_target_predictor.rs  lib.rs  loop_predictor.rs  ltage_predictor.rs  multiperspective_perceptron.rs  multiperspective_perceptron_checkpoint.rs  multiperspective_perceptron_snapshot.rs  o3_dependency.rs  o3_fu_latency.rs  o3_pipeline.rs  o3_pipeline_scoped_issue.rs  o3_runtime.rs  o3_runtime_authority.rs  o3_runtime_checkpoint.rs  o3_runtime_checkpoint_branch_mismatch.rs  o3_runtime_checkpoint_tests.rs  o3_runtime_control_window.rs  o3_runtime_control_window_tests.rs  o3_runtime_error.rs  o3_runtime_handoff.rs  o3_runtime_helpers.rs  o3_runtime_issue.rs  o3_runtime_issue_tests.rs  o3_runtime_live_window.rs  (+94 more)
crates/rem6-cpu/tests/: bimode_predictor.rs  branch_predictor.rs  cluster.rs  fetch_frontend.rs  gshare_predictor.rs  htm_transaction.rs  in_order_pipeline.rs  indirect_target_predictor.rs  loop_predictor.rs  ltage_predictor.rs  multiperspective_perceptron.rs  o3_misc_readiness.rs  o3_pipeline.rs  o3_rename.rs  o3_runtime.rs  o3_runtime_inst_type.rs  riscv_atomic_ordering.rs  riscv_branch_prediction.rs  riscv_checker.rs  riscv_cluster.rs  riscv_cluster_activity.rs  riscv_cluster_batch_evidence.rs  riscv_cluster_batch_timeline_evidence.rs  riscv_cluster_batch_worker_evidence.rs  riscv_cluster_data.rs  riscv_cluster_progress_evidence.rs  riscv_cluster_remote_send_evidence.rs  riscv_cluster_sc_progress.rs  riscv_cluster_tick_limit.rs  riscv_cluster_translation.rs  riscv_core_identity.rs  riscv_fetch_stream.rs  riscv_frontend.rs  riscv_in_order_timing.rs  riscv_mmio_data.rs  riscv_mmio_frontend.rs  riscv_sc_progress.rs  riscv_scalar_float_frontend.rs  riscv_sv39_memory_walker.rs  riscv_topology_data.rs  (+11 more)
crates/rem6-directory/: Cargo.toml
crates/rem6-directory/src/: chi.rs  lib.rs  moesi.rs
crates/rem6-directory/tests/: chi_directory.rs  mesi_directory.rs  moesi_directory.rs  msi_directory.rs
crates/rem6-platform/: Cargo.toml
crates/rem6-platform/src/: device_tree.rs  lib.rs  readfile.rs
crates/rem6-platform/tests/: cpu_local_timer_builder.rs  platform_builder.rs  plic_contexts.rs  readfile_device.rs  source_policy.rs
crates/rem6-storage/: Cargo.toml
crates/rem6-storage/src/: checkpoint.rs  ide.rs  ide_disk.rs  ide_dma.rs  ide_error.rs  ide_identify.rs  ide_pci.rs  ide_snapshot.rs  ide_task_file.rs  ide_timing.rs  ide_transfer.rs  lib.rs  simple_disk.rs
crates/rem6-storage/tests/: disk_image.rs  ide_checkpoint.rs  ide_controller.rs  ide_disk.rs  ide_pci.rs  ide_timing.rs  simple_disk.rs  source_policy.rs
crates/rem6-system/: Cargo.toml
crates/rem6-system/src/: clint_checkpoint.rs  coherence_checkpoint.rs  cpu_local_timer_checkpoint.rs  data_cache_controller_error.rs  data_cache_run.rs  fabric_checkpoint.rs  fabric_wait_run.rs  guest_event.rs  guest_fd.rs  guest_fd_checkpoint.rs  guest_futex.rs  guest_futex_checkpoint.rs  host.rs  lib.rs  (+58 more)
crates/rem6-uart/: Cargo.toml
crates/rem6-workload/: Cargo.toml
(+1769 files in other folders)
