[workspace]
members = [
    "crates/rem6-kernel",
    "crates/rem6-memory",
    "crates/rem6-topology",
    "crates/rem6-transport",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SihaoLiu/rem6"

[workspace.lints.rust]
unsafe_code = "forbid"
