[workspace]
members = [
    "crates/rem6-cache",
    "crates/rem6-checkpoint",
    "crates/rem6-coherence",
    "crates/rem6-directory",
    "crates/rem6-dram",
    "crates/rem6-fabric",
    "crates/rem6-interrupt",
    "crates/rem6-kernel",
    "crates/rem6-memory",
    "crates/rem6-mmio",
    "crates/rem6-platform",
    "crates/rem6-protocol-msi",
    "crates/rem6-stats",
    "crates/rem6-system",
    "crates/rem6-timer",
    "crates/rem6-topology",
    "crates/rem6-transport",
    "crates/rem6-uart",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SihaoLiu/rem6"

[workspace.lints.rust]
unsafe_code = "forbid"
