[package]
name = "rem6-accelerator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rem6-kernel = { path = "../rem6-kernel" }
rem6-memory = { path = "../rem6-memory" }
rem6-topology = { path = "../rem6-topology" }
rem6-transport = { path = "../rem6-transport" }

[lints]
workspace = true
