[package]
name = "rem6-coherence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rem6-cache = { path = "../rem6-cache" }
rem6-directory = { path = "../rem6-directory" }
rem6-dram = { path = "../rem6-dram" }
rem6-fabric = { path = "../rem6-fabric" }
rem6-kernel = { path = "../rem6-kernel" }
rem6-memory = { path = "../rem6-memory" }
rem6-protocol-chi = { path = "../rem6-protocol-chi" }
rem6-protocol-mesi = { path = "../rem6-protocol-mesi" }
rem6-protocol-moesi = { path = "../rem6-protocol-moesi" }
rem6-protocol-msi = { path = "../rem6-protocol-msi" }
rem6-topology = { path = "../rem6-topology" }
rem6-transport = { path = "../rem6-transport" }

[lints]
workspace = true
