[package]
name = "rem6-cpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rem6-boot = { path = "../rem6-boot" }
rem6-isa-riscv = { path = "../rem6-isa-riscv" }
rem6-kernel = { path = "../rem6-kernel" }
rem6-memory = { path = "../rem6-memory" }
rem6-mmio = { path = "../rem6-mmio" }
rem6-topology = { path = "../rem6-topology" }
rem6-transport = { path = "../rem6-transport" }

[dev-dependencies]
rem6-cache = { path = "../rem6-cache" }

[lints]
workspace = true
