[package]
name = "rem6-directory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rem6-memory = { path = "../rem6-memory" }
rem6-protocol-mesi = { path = "../rem6-protocol-mesi" }
rem6-protocol-moesi = { path = "../rem6-protocol-moesi" }
rem6-protocol-msi = { path = "../rem6-protocol-msi" }

[lints]
workspace = true
