[package]
name = "rem6-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rem6-checkpoint = { path = "../rem6-checkpoint" }
rem6-interrupt = { path = "../rem6-interrupt" }
rem6-kernel = { path = "../rem6-kernel" }
rem6-memory = { path = "../rem6-memory" }
rem6-pci = { path = "../rem6-pci" }
same-file = "1.0.6"

[lints]
workspace = true
