[package]
name = "rem6-system"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rem6-accelerator = { path = "../rem6-accelerator" }
rem6-boot = { path = "../rem6-boot" }
rem6-checkpoint = { path = "../rem6-checkpoint" }
rem6-coherence = { path = "../rem6-coherence" }
rem6-cpu = { path = "../rem6-cpu" }
rem6-debug = { path = "../rem6-debug" }
rem6-dram = { path = "../rem6-dram" }
rem6-fabric = { path = "../rem6-fabric" }
rem6-gpu = { path = "../rem6-gpu" }
rem6-interrupt = { path = "../rem6-interrupt" }
rem6-isa-riscv = { path = "../rem6-isa-riscv" }
rem6-kernel = { path = "../rem6-kernel" }
rem6-memory = { path = "../rem6-memory" }
rem6-mmio = { path = "../rem6-mmio" }
rem6-net = { path = "../rem6-net" }
rem6-pci = { path = "../rem6-pci" }
rem6-platform = { path = "../rem6-platform" }
rem6-protocol-chi = { path = "../rem6-protocol-chi" }
rem6-protocol-mesi = { path = "../rem6-protocol-mesi" }
rem6-protocol-moesi = { path = "../rem6-protocol-moesi" }
rem6-protocol-msi = { path = "../rem6-protocol-msi" }
rem6-stats = { path = "../rem6-stats" }
rem6-storage = { path = "../rem6-storage" }
rem6-timer = { path = "../rem6-timer" }
rem6-topology = { path = "../rem6-topology" }
rem6-transport = { path = "../rem6-transport" }
rem6-uart = { path = "../rem6-uart" }
rem6-virtio = { path = "../rem6-virtio" }
rem6-workload = { path = "../rem6-workload" }

[lints]
workspace = true
