[package]
name = "rem6-uart"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rem6-amba = { path = "../rem6-amba" }
rem6-interrupt = { path = "../rem6-interrupt" }
rem6-kernel = { path = "../rem6-kernel" }
rem6-memory = { path = "../rem6-memory" }
rem6-mmio = { path = "../rem6-mmio" }

[lints]
workspace = true
