[package]
name = "rem6-workload"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rem6-boot = { path = "../rem6-boot" }
rem6-kernel = { path = "../rem6-kernel" }
rem6-memory = { path = "../rem6-memory" }
rem6-stats = { path = "../rem6-stats" }

[lints]
workspace = true
