[package]
name = "rem6"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rem6-boot = { path = "../rem6-boot" }
rem6-cpu = { path = "../rem6-cpu" }
rem6-dram = { path = "../rem6-dram" }
rem6-isa-riscv = { path = "../rem6-isa-riscv" }
rem6-kernel = { path = "../rem6-kernel" }
rem6-memory = { path = "../rem6-memory" }
rem6-stats = { path = "../rem6-stats" }
rem6-system = { path = "../rem6-system" }
rem6-traffic = { path = "../rem6-traffic" }
rem6-transport = { path = "../rem6-transport" }
rem6-workload = { path = "../rem6-workload" }
sha2 = "0.10"

[lints]
workspace = true
