[package]
name = "rem6"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rem6-boot = { path = "../rem6-boot" }
rem6-cache = { path = "../rem6-cache" }
rem6-coherence = { path = "../rem6-coherence" }
rem6-cpu = { path = "../rem6-cpu" }
rem6-debug = { path = "../rem6-debug" }
rem6-dram = { path = "../rem6-dram" }
rem6-gpu = { path = "../rem6-gpu" }
rem6-isa-riscv = { path = "../rem6-isa-riscv" }
rem6-kernel = { path = "../rem6-kernel" }
rem6-memory = { path = "../rem6-memory" }
rem6-mmio = { path = "../rem6-mmio" }
rem6-platform = { path = "../rem6-platform" }
rem6-power = { path = "../rem6-power" }
rem6-stats = { path = "../rem6-stats" }
rem6-system = { path = "../rem6-system" }
rem6-traffic = { path = "../rem6-traffic" }
rem6-transport = { path = "../rem6-transport" }
rem6-workload = { path = "../rem6-workload" }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2"] }

[lints]
workspace = true
